# 2D_editor

./: .gitignore  CMakeLists.txt
2D_Editor/: 2D_Editor.sln  2D_Editor.sublime-project
2D_Editor/2D_Editor/: 2D_Editor.vcxproj  2D_Editor.vcxproj.filters
2D_Editor/2D_Editor/headers/: ellipse.hpp  point.hpp  quadrilateral.hpp  segment.hpp  triangle.hpp
2D_Editor/2D_Editor/source/: ellipse.cpp  main.cpp  point.cpp  quadrilateral.cpp  segment.cpp  triangle.cpp
src/: Ishape.hpp  a.out  main.cpp
src/data_check/: data_check.cpp  data_check.hpp
src/data_structures/: dllist.hpp  stack.hpp
src/data_structures_test/: main_test.cpp  test.cpp  test.hpp
src/ellipse/: ellipse.cpp  ellipse.hpp
src/menu/: menu.cpp  menu.hpp
src/point/: point.cpp  point.hpp
src/quadrangle/: quadrangle.cpp  quadrangle.hpp
src/segment/: segment.cpp  segment.hpp
src/triangle/: triangle.cpp  triangle.hpp
